# dicetool

./: design.mkd  dicetool.cabal  license  readme.mkd
scripts/: build.bat  clean.bat  run.bat  test.bat
src/: DiceTool.hs  Main.hs
src/DiceTool/: Commands.hs  Interpreter.hs  Parser.hs  Random.hs  Types.hs
src/DiceTool/IO/: Strict.hs
tests/: TestMain.hs
tests/Tests/: Data.hs  Interpreter.hs  Parser.hs
